# soundthemed

./: Cargo.toml  LICENSE  README.md
config-gui/: Cargo.toml
config-gui/src/: main.rs  theme_creator_ui.rs  window.rs
daemon/: Cargo.toml
daemon/src/: battery.rs  dbus_service.rs  events.rs  main.rs  network.rs  niri.rs  notifications.rs  player.rs  session.rs  udev_monitor.rs  volume.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  sound_ids.rs  theme.rs  theme_creator.rs
shim/: bell_shim.c
src/: battery.rs  config.rs  events.rs  main.rs  player.rs  theme.rs  udev_monitor.rs
