[package]
name = "soundthemed-config"
version = "0.1.0"
edition = "2024"
description = "GTK4 configuration GUI for soundthemed"
license = "MIT"

[dependencies]
soundthemed-shared = { path = "../shared" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
log = "0.4"
env_logger = "0.11"
