[package]
name = "soundthemed"
version = "0.1.0"
edition = "2024"
description = "Freedesktop sound theme daemon — plays event sounds for USB, battery, network, session, and more"
license = "MIT"

[dependencies]
soundthemed-shared = { path = "../shared" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "fs", "sync", "time"] }
udev = "0.9"
clap = { version = "4", features = ["derive"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
libc = "0.2"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
